# dns-orchestrator

./: .gitignore  LICENSE  README.md  README.zh-CN.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
dns-orchestrator-core/: Cargo.toml
dns-orchestrator-core/src/: lib.rs
dns-orchestrator-core/src/crypto/: mod.rs  versions.rs
dns-orchestrator-core/src/services/: account_bootstrap_service.rs  account_lifecycle_service.rs  account_metadata_service.rs  account_service.rs  credential_management_service.rs  dns_service.rs  domain_service.rs  import_export_service.rs  mod.rs  provider_metadata_service.rs
dns-orchestrator-core/src/traits/: account_repository.rs
dns-orchestrator-core/src/types/: account.rs  export.rs  mod.rs
dns-orchestrator-core/src/utils/: datetime.rs
dns-orchestrator-provider/: Cargo.toml
dns-orchestrator-provider/src/: error.rs  factory.rs  http_client.rs  lib.rs  types.rs
dns-orchestrator-provider/src/providers/: aliyun.rs  cloudflare.rs  common.rs  dnspod.rs  huaweicloud.rs  mod.rs
dns-orchestrator-provider/src/utils/: datetime.rs  mod.rs
docs/: ARCHITECTURE.md
docs/release-note/: v1.0.10.md  v1.0.8.md
docs/release-notes/: v1.3.2.md  v1.4.0.md
public/icons/: icon.icns
src/: App.tsx  index.css  main.tsx
src-actix-web/: Cargo.toml
src-actix-web/src/: main.rs
src-actix-web/src/crypto/: mod.rs
src-actix-web/src/error/: mod.rs
src-actix-web/src/handlers/: account.rs  dns.rs  domain.rs  invoke.rs  toolbox.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  types.rs
src-tauri/src/adapters/: account_repository.rs  credential_store.rs
src-tauri/src/commands/: account.rs  dns.rs  domain.rs  mod.rs  toolbox.rs  updater.rs
src-tauri/src/credentials/: android.rs
src-tauri/src/providers/: aliyun.rs  cloudflare.rs  dnspod.rs  huaweicloud.rs  mod.rs
src/components/account/: AccountForm.tsx  AccountList.tsx  ExportDialog.tsx  ImportDialog.tsx
src/components/accounts/: AccountBatchActionBar.tsx  AccountsPage.tsx
src/components/dns/: DnsRecordCard.tsx  DnsRecordForm.tsx  DnsRecordRow.tsx  DnsRecordTable.tsx
src/components/domain/: DomainList.tsx
src/constants/: index.ts
src/lib/: debug.ts  env.ts  error.ts  open-external.ts  platform.tauri.ts  platform.web.ts  tauri.ts
src/services/: account.service.ts  file.service.ts  index.ts
src/stores/: accountStore.ts  dnsStore.ts  domainStore.ts  settingsStore.ts  updaterStore.ts
src/types/: dns.ts  index.ts  toolbox.ts
(+61 files in other folders)
